// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@inline block lambda and destructuring 1`] = `
"local ____exports = {}
---
-- @inline
local function apply2(self, v, fn)
    return fn(nil, v)
end
---
-- @inline
local function getPair(self)
    return 42, "hello"
end
function ____exports.test(self)
    local r1
    do
        local ____lambdaResult_0 = nil
        do
            local ____temp_inline_1 = 5 * 2
            ____lambdaResult_0 = ____temp_inline_1 + 1
        end
        r1 = ____lambdaResult_0
    end
    local num, str = 42, "hello"
    return {r1, num, str}
end
return ____exports"
`;

exports[`@inline chained and multi-return lambda 1`] = `
"local ____exports = {}
---
-- @inline
local function apply(self, v, fn)
    return fn(nil, v)
end
---
-- @inline
local function choose(self, cond, onTrue, onFalse)
    local ____cond_0
    if cond then
        ____cond_0 = onTrue(nil)
    else
        ____cond_0 = onFalse(nil)
    end
    return ____cond_0
end
function ____exports.test(self)
    local a = 3 * 2
    local b = true and 100 or 200
    return {a, b}
end
return ____exports"
`;

exports[`@inline in for and if 1`] = `
"local ____exports = {}
---
-- @inline
local function filter(self, arr, pred)
    local result = {}
    for ____, item in ipairs(arr) do
        if pred(nil, item) then
            result[#result + 1] = item
        end
    end
    return result
end
function ____exports.test(self)
    local data = {
        1,
        2,
        3,
        4,
        5,
        6
    }
    local evens
    do
        local ____result_inline_0 = {}
        for ____, ____item_inline_1 in ipairs(data) do
            if ____item_inline_1 % 2 == 0 then
                result[#result + 1] = ____item_inline_1
            end
        end
        evens = ____result_inline_0
    end
    local withBlock
    do
        local ____result_inline_4 = {}
        for ____, ____item_inline_5 in ipairs(data) do
            local ____lambdaResult_2 = nil
            do
                if ____item_inline_5 == 3 then
                    ____lambdaResult_2 = true
                    goto ____inline_end_3
                end
                ____lambdaResult_2 = ____item_inline_5 > 4
                ::____inline_end_3::
            end
            if ____lambdaResult_2 then
                result[#result + 1] = ____item_inline_5
            end
        end
        withBlock = ____result_inline_4
    end
    return {evens, withBlock}
end
return ____exports"
`;

exports[`@inline multi returns in lambda 1`] = `
"local ____exports = {}
---
-- @inline
local function apply(self, value, block)
    return block(value)
end
function ____exports.test(self)
    local random = math.random()
    local a
    do
        local ____lambdaResult_0 = nil
        do
            if random == 10 then
                ____lambdaResult_0 = "ten"
                goto ____inline_end_1
            end
            if random < 0 then
                ____lambdaResult_0 = "down zero"
                goto ____inline_end_1
            end
            if random > 10 then
                ____lambdaResult_0 = "up ten"
                goto ____inline_end_1
            end
            ____lambdaResult_0 = "down ten"
            ::____inline_end_1::
        end
        a = ____lambdaResult_0
    end
end
return ____exports"
`;

exports[`@inline multi returns in lambda lua 5.1 1`] = `
"local ____exports = {}
---
-- @inline
local function apply(self, value, block)
    return block(value)
end
function ____exports.test(self)
    local random = math.random()
    local a
    do
        local ____lambdaResult_0 = nil
        do
            local ____done_____lambdaResult_0 = false
            if random == 10 then
                if not ____done_____lambdaResult_0 then
                    ____lambdaResult_0 = "ten"
                    ____done_____lambdaResult_0 = true
                end
            end
            if random < 0 then
                if not ____done_____lambdaResult_0 then
                    ____lambdaResult_0 = "down zero"
                    ____done_____lambdaResult_0 = true
                end
            end
            if random > 10 then
                if not ____done_____lambdaResult_0 then
                    ____lambdaResult_0 = "up ten"
                    ____done_____lambdaResult_0 = true
                end
            end
            if not ____done_____lambdaResult_0 then
                ____lambdaResult_0 = "down ten"
                ____done_____lambdaResult_0 = true
            end
        end
        a = ____lambdaResult_0
    end
end
return ____exports"
`;

exports[`@inline side effects and closure 1`] = `
"local ____exports = {}
---
-- @inline
local function forEach(self, arr, body)
    for ____, item in ipairs(arr) do
        body(nil, item)
    end
end
function ____exports.test(self)
    local sum = 0
    do
        for ____, ____item_inline_2 in ipairs({1, 2, 3}) do
            local ____lambdaResult_0 = nil
            do
                sum = sum + ____item_inline_2
            end
        end
    end
    return sum
end
return ____exports"
`;

exports[`@inline simple scalars and expression lambdas 1`] = `
"local ____exports = {}
---
-- @inline
local function add(self, a, b)
    return a + b
end
---
-- @inline
local function apply(self, v, fn)
    return fn(nil, v)
end
function ____exports.test(self)
    local r1 = 2 + 3
    local r2 = 10 * 2
    local r3 = 5 + 1
    return {r1, r2, r3}
end
return ____exports"
`;
